testing/tests/ui/include-a-folder.stderr
error: the previous template error derives from
 --> tests/ui/include-a-folder.rs:4:25
  |
4 | #[template(ext = "txt", source = r#"{% include "a_file_that_is_actually_a_folder.html" %}"#)]
  |                         ^^^^^^
